--- a/ui/1.html
+++ b/ui/1.html
@@ -1,5 +1,8 @@
 <html>
-    <head><title>1 | Sarvesh Singh</title></head>
+    <head>
+        <title>1 | Sarvesh Singh</title>
+        <meta name=viewport" content="width=device-width, initial-scale=1.0"/>
+    </head>
     <body>
         <div>
             <a href="/">Home</a>
