--- a/ui/1.html
+++ b/ui/1.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>1 | Sarvesh Singh</title>
-        <meta name=viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
     <body>
         <div>
