[imad-console] Updates ui/1.html

--- a/ui/1.html
+++ b/ui/1.html
@@ -2,8 +2,17 @@
     <head>
         <title>1 | Sarvesh Singh</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <style>
+        .container{
+        max-width:800px;//pixel
+        margin:0 auto;
+        color:grey;
+        font-family:sans-serif;
+        }
+        </style>
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -26,6 +35,6 @@
                 This is my page.This is my page.This is my page.This is my page.This is my page.This is my page.This is my page.This is my page.This is my page.This is my page.This is my page.This is my page.This is my page.This is my page.This is my page.This is my page.This is my page.This is my page.
             </p>
         </div>
-        
+        </div>
     </body>
 </html>
