[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
+            <img id="madi" src="https://scontent.fmaa1-2.fna.fbcdn.net/v/t1.0-9/12234847_969765716430374_199926598983653164_n.jpg?oh=ed4e18d8ee1c1260a6bb9b996cfd9f3c&oe=589C0D51" class="img-medium"/>
         </div>
         <br>
         <div id='main-text' class='center text-big bold'>
