[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,10 @@
         <div id='main-text' class='center text-big bold'>
             Hi! I am your webapp.
         </div>
+        <div class="footer">
+         <button id="counter">Click Me!</button>
+         <span id="count"> </span>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
