--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,11 @@
         <div class="footer">
          <button id="counter">Click Me!</button>
          <span id="count"> </span>
+         <br/>
+         <input type="text" id="name" placeholder="name"></input>
+         <input type="submit" id="submit_btn" value="Submit"></input>
+         <ul id="namelist">
+         </ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
