--- a/ui/index.html
+++ b/ui/index.html
@@ -11,14 +11,15 @@
         <div id='main-text' class='center text-big bold'>
             Hi! I am your webapp.
         </div>
-        <div class="footer">
-         <button id="counter">Click Me!</button>
-         <span id="count"> </span>
-         <br/>
-         <input type="text" id="name" placeholder="name"></input>
-         <input type="submit" id="submit_btn" value="Submit"></input>
-         <ul id="namelist">
-         </ul>
+        <h3>Signup</h3>
+        <div>
+            
+        </div>
+        <h3>Login</h3>
+        <div>
+            <input type="text" id="name" placeholder="name"></input>
+            <input type="text" id="password"></input>
+            <input type="submit" id="submit_btn" value="Submit"></input>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
