--- a/ui/index.html
+++ b/ui/index.html
@@ -17,9 +17,9 @@
         </div>
         <h3>Login</h3>
         <div>
-            <input type="text" id="name" placeholder="name"></input>
-            <input type="text" id="password"></input>
-            <input type="submit" id="submit_btn" value="Submit"></input>
+            <input type="text" id="name" placeholder="name"/>
+            <input type="password" id="password"/>
+            <input type="submit" id="submit_btn"/>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
