--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
         </div>
         <h3>Login</h3>
         <div>
-            <input type="text" id="name" placeholder="name"/>
+            <input type="text" id="username" placeholder="name"/>
             <input type="password" id="password"/>
             <input type="submit" id="submit_btn"/>
         </div>
