--- a/ui/index.html
+++ b/ui/index.html
@@ -297,10 +297,10 @@
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 	<footer class="w3-container w3-padding-32 w3-light-grey w3-center">
 		<h4>Stay Connected Stay Updated !</h4>
-		<a class="w3-btn-floating w3-teal" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
-		<a class="w3-btn-floating w3-teal" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
-		<a class="w3-btn-floating w3-teal" href="javascript:void(0)" title="Google +"><i class="fa fa-google-plus"></i></a>
-		<a class="w3-btn-floating w3-teal w3-hide-small" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+		<a class="w3-btn-floating w3-teal" href="https://www.facebook.com/sarvesh.singh2" title="Facebook"><i class="fa fa-facebook"></i></a>
+		<a class="w3-btn-floating w3-teal" href="https://twitter.com/sarvesh_smcs2" title="Twitter"><i class="fa fa-twitter"></i></a>
+		<a class="w3-btn-floating w3-teal" href="https://plus.google.com/u/0/104596882454230559505" title="Google +"><i class="fa fa-google-plus"></i></a>
+		<a class="w3-btn-floating w3-teal w3-hide-small" href="https://www.linkedin.com/in/sarvesh18" title="Linkedin"><i class="fa fa-linkedin"></i></a>
 		<p>CopyRight © 2017</p>
 		<p>Develop & Maintained @ <a href="http://" target="_blank">Sarvesh</a></p>
 		<div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
