[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
-	<title>www.blog.com</title>
+	<title>sarvesh18.imad.hasura-app.io</title>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
  
