[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,9 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
  
     <!--
-	<link rel="stylesheet" href="w3.css">
-	-->
+	<link rel="stylesheet" href="ui/style.css">
 	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+	-->
+	<link rel="stylesheet" href="ui/w3.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
 	<style>
@@ -23,10 +24,10 @@
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 	<div class="w3-top">
 		<div class="w3-display-topright">
-			<img src="file:\\C:\Users\Sarvesh Singh\Desktop\Crastinator\h8.png" class="w3-hover-opacity" style="width:60px">
+			<img src="ui/icon1" class="w3-hover-opacity" style="width:60px">
 		</div>
 		<div class="w3-display-topleft">
-			<img src="file:\\C:\Users\Sarvesh Singh\Desktop\Crastinator\h7.jpg" class="w3-hover-opacity" style="width:60px">
+			<img src="ui/icon2" class="w3-hover-opacity" style="width:60px">
 		</div>
 	</div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
@@ -286,11 +287,11 @@
 			};
 		    var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
 			var marker = new google.maps.Marker({
-			position: myCenter,
-		});
-		marker.setMap(map);
-	}
-	google.maps.event.addDomListener(window, 'load', initialize);
+			    position: myCenter,
+	    	});
+	    	marker.setMap(map);
+    	}
+	    google.maps.event.addDomListener(window, 'load', initialize);
 	</script>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
  <hr>
@@ -302,7 +303,7 @@
 		<a class="w3-btn-floating w3-teal" href="https://plus.google.com/u/0/104596882454230559505" title="Google +"><i class="fa fa-google-plus"></i></a>
 		<a class="w3-btn-floating w3-teal w3-hide-small" href="https://www.linkedin.com/in/sarvesh18" title="Linkedin"><i class="fa fa-linkedin"></i></a>
 		<p>CopyRight © 2017</p>
-		<p>Develop & Maintained @ <a href="http://" target="_blank">Sarvesh</a></p>
+		<p>Develop & Maintained @ <a href="http://technical-spark.blogspot.in/" target="_blank">Sarvesh</a></p>
 		<div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
 			<span class="w3-text w3-padding w3-teal w3-hide-small">Go To Top</span>
 			<a class="w3-btn w3-light-grey" href="#myPage"><span class="w3-xlarge">
