--- a/ui/index.html
+++ b/ui/index.html
@@ -24,10 +24,10 @@
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 	<div class="w3-top">
 		<div class="w3-display-topright">
-			<img src="ui/icon1" class="w3-hover-opacity" style="width:60px">
+			<img src="ui/icon1.jpeg" class="w3-hover-opacity" style="width:60px">
 		</div>
 		<div class="w3-display-topleft">
-			<img src="ui/icon2" class="w3-hover-opacity" style="width:60px">
+			<img src="ui/icon2.png" class="w3-hover-opacity" style="width:60px">
 		</div>
 	</div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
