--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="ui/style.css">
 	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 	-->
-	<link rel="stylesheet" href="ui/w3.css">
+	<link rel="stylesheet" src="ui/w3.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
 	<style>
