[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,10 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
  
     <!--
-	<link rel="stylesheet" href="ui/style.css">
+	<link rel="stylesheet" href="/ui/style.css">
 	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 	-->
-	<link rel="stylesheet" src="ui/w3.css">
+	<link rel="stylesheet" href="/ui/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
 	<style>
@@ -24,10 +24,10 @@
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 	<div class="w3-top">
 		<div class="w3-display-topright">
-			<img src="ui/icon1.jpeg" class="w3-hover-opacity" style="width:60px">
+			<img src="/ui/icon1.jpeg" class="w3-hover-opacity" style="width:60px">
 		</div>
 		<div class="w3-display-topleft">
-			<img src="ui/icon2.png" class="w3-hover-opacity" style="width:60px">
+			<img src="/ui/icon2.png" class="w3-hover-opacity" style="width:60px">
 		</div>
 	</div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
