[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 	<div class="w3-top">
 		<div class="w3-display-topright">
-			<img src="/ui/icon1.jpg" class="w3-hover-opacity" style="width:60px">
+			<img src="http://aktu.ac.in/images/logo.png" class="w3-hover-opacity" style="width:60px">
 		</div>
 		<div class="w3-display-topleft">
 			<img src="/ui/icon2.png" class="w3-hover-opacity" style="width:60px">
