[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -231,7 +231,7 @@
 		<p>
 			<button class="w3-btn w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
 				<i class="fa fa-download w3-margin-right"></i>Download Resume
-				
+				<a href="https://drive.google.com/file/d/0B524wnHXkUOTVHNhWXdTYW4yLVk/view?usp=sharing"</a>
 			</button>
 		</p>
 	</div>
