--- a/ui/index.html
+++ b/ui/index.html
@@ -219,19 +219,14 @@
 		</div>
     </div>
     -->
-    <div>
-        <input type="text" id="username" placeholder="name"/>
-        <input type="password" id="password"/>
-        <input type="submit" id="submit_btn"/>
-    </div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 <hr>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
     <div class="w3-container w3-center"
 		<p>
 			<button class="w3-btn w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
-				<i class="fa fa-download w3-margin-right"></i>Download Resume
-				<a href="https://drive.google.com/file/d/0B524wnHXkUOTVHNhWXdTYW4yLVk/view?usp=sharing"</a>
+				<a href="https://drive.google.com/file/d/0B524wnHXkUOTVHNhWXdTYW4yLVk/view?usp=sharing"><i class="fa fa-download w3-margin-right"></i>Download Resume
+				</a>
 			</button>
 		</p>
 	</div>
@@ -318,13 +313,13 @@
 				<span onclick="document.getElementById('id01').style.display='none'" class="w3-closebtn w3-hover-red w3-container w3-padding-8 w3-display-topright" title="Close Modal">&times;</span>
 				<!-- <img src=" " alt="Icon" style="width:30%" class="w3-circle w3-margin-top"> -->
 			</div>
-    <form class="w3-container" action=" ">
+    <form class="w3-container">
         <div class="w3-section">
 			<label><b>Username</b></label>
-			<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" name="usrname" required>
+			<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" id="username" required>
 			<label><b>Password</b></label>
-			<input class="w3-input w3-border" type="password" placeholder="Enter Password" name="psw" required>
-			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit">Login</button>
+			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="password" required>
+			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit" id="submit_btn">Login</button>
 			<input class="w3-check w3-margin-top" type="checkbox" checked="checked"> Remember me
         </div>
     </form>
