--- a/ui/index.html
+++ b/ui/index.html
@@ -338,13 +338,13 @@
     <form class="w3-container" action=" ">
         <div class="w3-section">
 			<label><b>Username</b></label>
-			<input class="w3-input w3-border" type="text" placeholder="Enter Username" name="username" required>
+			<input class="w3-input w3-border" type="text" placeholder="Enter Username" id="username" required>
 			<!-- Ajax -->
 			<label><b>Password</b></label>
-			<input class="w3-input w3-border" type="password" placeholder="Enter Password" name="password" required>
+			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="password" required>
 			<label><b>Email</b></label>
-			<input class="w3-input w3-border" type="email" placeholder="Enter Email" name="email" required>
-			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit">Signup</button>
+			<input class="w3-input w3-border" type="email" placeholder="Enter Email" id="email" required>
+			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit" id="submit_btn">Signup</button>
 			<input class="w3-check w3-margin-top" type="checkbox" checked="checked" required> For Signup, you must read and agree to our terms and conditions.
         </div>
     </form>
