--- a/ui/index.html
+++ b/ui/index.html
@@ -319,7 +319,7 @@
 			<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" id="username" required>
 			<label><b>Password</b></label>
 			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="password" required>
-			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit" id="submit_btn_login">Login</button>
+			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit" id="submit_btn">Login</button>
 			<input class="w3-check w3-margin-top" type="checkbox" checked="checked"> Remember me
         </div>
     </form>
@@ -344,7 +344,7 @@
 			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="password" required>
 			<label><b>Email</b></label>
 			<input class="w3-input w3-border" type="email" placeholder="Enter Email" id="email" required>
-			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit" id="submit_btn_signup">Signup</button>
+			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit" id="register_btn">Signup</button>
 			<input class="w3-check w3-margin-top" type="checkbox" checked="checked" required> For Signup, you must read and agree to our terms and conditions.
         </div>
     </form>
