--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
  
     <!--
 	<link rel="stylesheet" href="/ui/style.css">
-	<link rel="stylesheet" href="/ui/style.css">
+	<link rel="stylesheet" href="/ui/w3.css">
 	-->
 	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -72,7 +72,7 @@
 				<th class="w3-dropdown-hover"><a href="#">Login/Signup<i class="fa fa-caret-down"></i></a>
 					<div class="w3-dropdown-content w3-white w3-card-4">
 						<a href="javascript:void(0)" onclick="document.getElementById('id01').style.display='block'">Login</a>
-						<a href="javascript:void(0)" onclick="document.getElementById('id02').style.display='block'">Signup</a>
+						<a href="javascript:void(1)" onclick="document.getElementById('id02').style.display='block'">Signup</a>
 					</div>
 				</th>
 				<th></th>
@@ -170,7 +170,7 @@
 			<li><a class="w3-black" href="#">1</a></li>
 			<li><a class="w3-hover-black" href="#">2</a></li>
 			<li><a class="w3-hover-black" href="#">3</a></li>
-			<li><a class="w3-hover-black" href="#">»</a></li>
+			<li><a class="w3-hover-black" href="#">>></a></li>
 		</ul>
 	</div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
@@ -197,7 +197,7 @@
 		<div class="w3-container w3-padding-64 w3-center" >
 				<div class="w3-row"><br>
 					<div class="w3-quarter w3-right">
-						<img src="file:\\C:\Users\Sarvesh Singh\Desktop\Crastinator\s1.jpg" alt="Coder" style="width:60%" class="w3-circle w3-hover-opacity">
+						<img src="https://scontent-sin6-1.xx.fbcdn.net/v/t1.0-1/c0.0.160.160/p160x160/12234847_969765716430374_199926598983653164_n.jpg?oh=88f7bc8742d52e84d6abbe590b9538a9&oe=58B7A476" alt="Coder" style="width:60%" class="w3-circle w3-hover-opacity">
 						<h3>Sarvesh</h3>
 						<p>Developer</p>
 					</div>
