--- a/ui/index.html
+++ b/ui/index.html
@@ -196,7 +196,7 @@
 <hr>
 		<div class="w3-container w3-padding-16 w3-center" >
 			<img src="https://scontent-sin6-1.xx.fbcdn.net/v/t1.0-1/c0.0.160.160/p160x160/12234847_969765716430374_199926598983653164_n.jpg?oh=88f7bc8742d52e84d6abbe590b9538a9&oe=58B7A476" alt="Coder" style="width:30%" class="w3-circle w3-hover-opacity">
-			<h3>Sarvesh</h3>
+			<h3><b>Sarvesh</b></h3>
 			<p>Developer</p>
 		</div>
 	</div>
