--- a/ui/index.html
+++ b/ui/index.html
@@ -72,7 +72,7 @@
 				<th class="w3-dropdown-hover"><a href="#">Login/Signup<i class="fa fa-caret-down"></i></a>
 					<div class="w3-dropdown-content w3-white w3-card-4">
 						<a href="javascript:void(0)" onclick="document.getElementById('id01').style.display='block'">Login</a>
-						<a href="javascript:void(1)" onclick="document.getElementById('id02').style.display='block'">Signup</a>
+						<a href="javascript:void(0)" onclick="document.getElementById('id02').style.display='block'">Signup</a>
 					</div>
 				</th>
 				<th></th>
@@ -230,27 +230,27 @@
 				<div class="w3-padding-16"><span class="w3-xlarge w3-border-dark-grey w3-bottombar">Contact Us</span></div>
 					<h3>Address</h3>
 					<p>ABES Engineering College</p>
-					<p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>  Ghaziabad</p>
-					<p><i class="fa fa-phone w3-text-teal w3-xlarge"></i>  +919454777897</p>
-					<p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  sarvesh.singh18@hotmail.com</p>
+					<p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>..Ghaziabad</p>
+					<p><i class="fa fa-phone w3-text-teal w3-xlarge"></i>..+919454777897</p>
+					<p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>..sarvesh.singh18@hotmail.com</p>
 				</div>
 			<div class="w3-col m7">
 				<form class="w3-container w3-card-4 w3-padding-16 w3-white">
 					<div class="w3-group">
 						<label class="w3-label">Name</label>
-						<input class="w3-input" type="text">
+						<input class="w3-input" type="text" id="nameA" required>
 					</div>
 					<div class="w3-group">
 						<label class="w3-label">Email</label>
-						<input class="w3-input" type="text">
+						<input class="w3-input" type="text" id="emailA" required>
 					</div>
 					<div class="w3-group">
 						<label class="w3-label">Subject</label>
-						<input class="w3-input" type="text">
+						<input class="w3-input" type="text" id="subjectA" required>
 					</div>
-					<input class="w3-check" type="checkbox" checked>
+					<input class="w3-check" type="checkbox" id="likeA" checked>
 					<label class="w3-validate">I Like it!</label>
-					<button type="button" class="w3-btn w3-right w3-theme">Send</button>
+					<button type="button" class="w3-btn w3-right w3-theme" id="subscription_btn">Send</button>
 				</form>
 			</div>
 		</div>
@@ -307,9 +307,9 @@
     <form class="w3-container">
         <div class="w3-section">
 			<label><b>Username</b></label>
-			<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" id="username" required>
+			<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" id="usernameS" required>
 			<label><b>Password</b></label>
-			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="password" required>
+			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="passwordS" required>
 			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit" id="submit_btn">Login</button>
 			<input class="w3-check w3-margin-top" type="checkbox" checked="checked"> Remember me
         </div>
@@ -329,12 +329,12 @@
     <form class="w3-container" action=" ">
         <div class="w3-section">
 			<label><b>Username</b></label>
-			<input class="w3-input w3-border" type="text" placeholder="Enter Username" id="username" required>
+			<input class="w3-input w3-border" type="text" placeholder="Enter Username" id="usernameR" required>
 			<!-- Ajax -->
 			<label><b>Password</b></label>
-			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="password" required>
+			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="passwordR" required>
 			<label><b>Email</b></label>
-			<input class="w3-input w3-border" type="email" placeholder="Enter Email" id="email" required>
+			<input class="w3-input w3-border" type="email" placeholder="Enter Email" id="emailR" required>
 			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit" id="register_btn">Signup</button>
 			<input class="w3-check w3-margin-top" type="checkbox" checked="checked" required> For Signup, you must read and agree to our terms and conditions.
         </div>
