[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -248,7 +248,7 @@
 						<label class="w3-label">Subject</label>
 						<input class="w3-input" type="text" id="subjectA" required>
 					</div>
-					<input class="w3-check" type="checkbox" id="likeA" checked>
+					<input class="w3-check" type="checkbox" value="true" id="likeA" checked>
 					<label class="w3-validate">I Like it!</label>
 					<button type="button" class="w3-btn w3-right w3-theme" id="subscription_btn">Send</button>
 				</form>
