--- a/ui/index.html
+++ b/ui/index.html
@@ -230,9 +230,9 @@
 				<div class="w3-padding-16"><span class="w3-xlarge w3-border-dark-grey w3-bottombar">Contact Us</span></div>
 					<h3>Address</h3>
 					<p>ABES Engineering College</p>
-					<p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>..Ghaziabad</p>
-					<p><i class="fa fa-phone w3-text-teal w3-xlarge"></i>..+919454777897</p>
-					<p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>..sarvesh.singh18@hotmail.com</p>
+					<p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>  Ghaziabad</p>
+					<p><i class="fa fa-phone w3-text-teal w3-xlarge"></i>  +919454777897</p>
+					<p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  sarvesh.singh18@hotmail.com</p>
 				</div>
 			<div class="w3-col m7">
 				<form class="w3-container w3-card-4 w3-padding-16 w3-white">
