[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -250,7 +250,7 @@
 					</div>
 					<input class="w3-check" type="checkbox" value="true" id="likeA" checked>
 					<label class="w3-validate">I Like it!</label>
-					<button type="button" class="w3-btn w3-right w3-theme" id="subscription_btn">Send</button>
+					<button type="button" class="w3-btn w3-right w3-theme" id="add_btn">Send</button>
 				</form>
 			</div>
 		</div>
