--- a/ui/index.html
+++ b/ui/index.html
@@ -324,7 +324,7 @@
 			<span onclick="document.getElementById('id02').style.display='none'" class="w3-closebtn w3-hover-red w3-container w3-padding-8 w3-display-topright" title="Close Modal">&times;</span>
 			<!-- <img src=" " alt="Icon" style="width:30%" class="w3-circle w3-margin-top"> -->
 		</div>
-        <div class="w3-section">
+        <div class="w3-container w3-section">
 			<label><b>Username</b></label>
 			<input class="w3-input w3-border" type="text" placeholder="Enter Username" id="usernameR" required>
 			<!-- Ajax -->
