--- a/ui/index.html
+++ b/ui/index.html
@@ -53,7 +53,6 @@
 		<table class="w3-table w3-navbar w3-card-2 w3-light-grey w3-margin-top w3-margin-left w3-margin-right">
 			<tr>
 				<th></th>
-				<th></th>
 				<th><a href="#myHome">Home</a></th>
 				<th class="w3-dropdown-hover"><a href="#">Blog<i class="fa fa-caret-down"></i></a>
 					<div class="w3-dropdown-content w3-white w3-card-4">
@@ -69,11 +68,7 @@
 					</div>
 				</th>
 				<th><a href="#teamMember">About Us</a></th>
-				<th class="w3-dropdown-hover"><a href="#">Login/Signup<i class="fa fa-caret-down"></i></a>
-					<div class="w3-dropdown-content w3-white w3-card-4">
-						<a href="javascript:void(0)" onclick="document.getElementById('id01').style.display='block'">Login</a>
-						<a href="javascript:void(0)" onclick="document.getElementById('id02').style.display='block'">Signup</a>
-					</div>
+				<th class="w3-dropdown-hover"><a href="javascript:void(0)" onclick="document.getElementById('id01').style.display='block'">Login/Signup<i class="fa fa-caret-down"></i></a>
 				</th>
 				<th></th>
 				<th></th>
@@ -304,7 +299,7 @@
 				<span onclick="document.getElementById('id01').style.display='none'" class="w3-closebtn w3-hover-red w3-container w3-padding-8 w3-display-topright" title="Close Modal">&times;</span>
 				<!-- <img src=" " alt="Icon" style="width:30%" class="w3-circle w3-margin-top"> -->
 			</div>
-        <div class="w3-section">
+        <div class="w3-container  w3-section">
 			<label><b>Username</b></label>
 			<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" id="usernameS" required>
 			<label><b>Password</b></label>
