--- a/ui/index.html
+++ b/ui/index.html
@@ -308,7 +308,7 @@
 			<input class="w3-check w3-margin-top" type="checkbox" checked="checked"> Remember me
         </div>
 		<div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
-			<button onclick="document.getElementById('id01').style.display='none'" type="button" class="w3-btn w3-red">Cancel</button>
+			<button onclick="document.getElementById('id02').style.display='block'" type="button" class="w3-btn w3-red">Signup</button>
 			<span class="w3-right w3-padding w3-hide-small">Forgot Password? <!-- <a href="#"> </a> --></span>
 		</div>
     </div>
@@ -331,7 +331,7 @@
 			<input class="w3-check w3-margin-top" type="checkbox" checked="checked" required> For Signup, you must read and agree to our terms and conditions.
         </div>
 		<div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
-			<button onclick="document.getElementById('id01').style.display='none'" type="button" class="w3-btn w3-red">Cancel</button>
+			<button onclick="document.getElementById('id01').style.display='block'" type="button" class="w3-btn w3-red">Login</button>
 		</div> 
     </div> 
 
