[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -233,17 +233,17 @@
 				<form class="w3-container w3-card-4 w3-padding-16 w3-white">
 					<div class="w3-group">
 						<label class="w3-label">Name</label>
-						<input class="w3-input" type="text" id="nameA" required>
+						<input class="w3-input" type="text" id="nameA" required/>
 					</div>
 					<div class="w3-group">
 						<label class="w3-label">Email</label>
-						<input class="w3-input" type="text" id="emailA" required>
+						<input class="w3-input" type="text" id="emailA" required/>
 					</div>
 					<div class="w3-group">
 						<label class="w3-label">Subject</label>
-						<input class="w3-input" type="text" id="subjectA" required>
+						<input class="w3-input" type="text" id="subjectA" required/>
 					</div>
-					<input class="w3-check" type="checkbox" value="true" id="likeA" checked>
+					<input class="w3-check" type="checkbox" value="true" id="likeA" checked/>
 					<label class="w3-validate">I Like it!</label>
 					<button type="button" class="w3-btn w3-right w3-theme" id="add_btn">Send</button>
 				</form>
@@ -301,11 +301,11 @@
 			</div>
         <div class="w3-container  w3-section">
 			<label><b>Username</b></label>
-			<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" id="usernameS" required>
+			<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" id="usernameS" required/>
 			<label><b>Password</b></label>
-			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="passwordS" required>
+			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="passwordS" required/>
 			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit" id="submit_btn">Login</button>
-			<input class="w3-check w3-margin-top" type="checkbox" checked="checked"> Remember me
+			<input class="w3-check w3-margin-top" type="checkbox" checked="checked"/> Remember me
         </div>
 		<div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
 			<button onclick="document.getElementById('id02').style.display='block'" type="button" class="w3-btn w3-red">Signup</button>
@@ -321,14 +321,14 @@
 		</div>
         <div class="w3-container w3-section">
 			<label><b>Username</b></label>
-			<input class="w3-input w3-border" type="text" placeholder="Enter Username" id="usernameR" required>
+			<input class="w3-input w3-border" type="text" placeholder="Enter Username" id="usernameR" required/>
 			<!-- Ajax -->
 			<label><b>Password</b></label>
-			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="passwordR" required>
+			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="passwordR" required/>
 			<label><b>Email</b></label>
-			<input class="w3-input w3-border" type="email" placeholder="Enter Email" id="emailR" required>
+			<input class="w3-input w3-border" type="email" placeholder="Enter Email" id="emailR" required/>
 			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit" id="register_btn">Signup</button>
-			<input class="w3-check w3-margin-top" type="checkbox" checked="checked" required> For Signup, you must read and agree to our terms and conditions.
+			<input class="w3-check w3-margin-top" type="checkbox" checked="checked" required/> For Signup, you must read and agree to our terms and conditions.
         </div>
 		<div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
 			<button onclick="document.getElementById('id01').style.display='block'" type="button" class="w3-btn w3-red">Login</button>
