[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -68,7 +68,7 @@
 					</div>
 				</th>
 				<th><a href="#teamMember">About Us</a></th>
-				<th><a href="javascript:void(0)" onclick="document.getElementById('id01').style.display='block'">Login/Signup<i class="fa fa-caret-down"></i></a>
+				<th><a href="javascript:void(0)" onclick="document.getElementById('id01').style.display='block'">Login</i></a>
 				</th>
 				<th></th>
 				<th></th>
