[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
 <head>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 	<title>sarvesh18.imad.hasura-app.io</title>
-	<link rel="shortcut icon" type="image/ico" href="http://www.jumboedusupplies.com/images/favicon.ico" />
+	<link rel="shortcut icon" href="http://www.jumboedusupplies.com/images/favicon.ico" />
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
  
