[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -275,6 +275,8 @@
     	}
 	    google.maps.event.addDomListener(window, 'load', initialize);
 	</script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPDoS0P-Vmk1mTquzzDdCS6iAcAJJXWhw&callback=initMap"
+  type="text/javascript"></script>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
  <hr>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
