--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
  
-    <!--
+        <!--
 	<link rel="stylesheet" href="/ui/style.css">
 	<link rel="stylesheet" href="/ui/w3.css">
 	-->
@@ -50,32 +50,6 @@
 	</div>
 	-->
 	
-	<div class="w3-container">
-		<table class="w3-table w3-navbar w3-card-2 w3-light-grey w3-margin-top w3-margin-left w3-margin-right">
-			<tr>
-				<th></th>
-				<th><a href="#myHome">Home</a></th>
-				<th class="w3-dropdown-hover"><a href="#">Blog<i class="fa fa-caret-down"></i></a>
-					<div class="w3-dropdown-content w3-white w3-card-4">
-						<a href="#">Coding</a>
-						<a href="#">Hacking</a>
-					</div>
-				</th>
-				<th><a href="#">Forum</a></th>
-				<th class="w3-dropdown-hover"><a href="#">Contact Us<i class="fa fa-caret-down"></i></a>
-					<div class="w3-dropdown-content w3-white w3-card-4">
-						<a href="#contact">Detail</a>
-						<a href="#googleMap">Location</a>
-					</div>
-				</th>
-				<th><a href="#teamMember">About Us</a></th>
-				<th><a href="javascript:void(0)" onclick="document.getElementById('id01').style.display='block'">Login</i></a>
-				</th>
-				<th></th>
-				<th></th>
-			</tr>
-		</table>
-	</div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->	
 	<div class="w3-panel w3-red w3-hover-opacity">
 		<marquee><p>Hey, Welcome Anonymous! Notification 4 U.</p></marquee>
@@ -204,12 +178,12 @@
 			<h4><b>Sarvesh</b></h4>
 			<p>DEVELOPER</p>
 		</div>
-    </div>
-    -->
+        </div>
+    	-->
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 <hr>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
-    <div class="w3-container w3-center"
+   	 <div class="w3-container w3-center"
 		<p>
 			<button class="w3-btn w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
 				<a href="https://drive.google.com/file/d/0B524wnHXkUOTVHNhWXdTYW4yLVk/view?usp=sharing"><i class="fa fa-download w3-margin-right"></i>Download Resume
@@ -286,7 +260,7 @@
 		<a class="w3-btn-floating w3-teal" href="https://twitter.com/sarvesh_smcs2" title="Twitter"><i class="fa fa-twitter"></i></a>
 		<a class="w3-btn-floating w3-teal" href="https://plus.google.com/u/0/104596882454230559505" title="Google +"><i class="fa fa-google-plus"></i></a>
 		<a class="w3-btn-floating w3-teal w3-hide-small" href="https://www.linkedin.com/in/sarvesh18" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-		<p>CopyRight © 2017</p>
+		<p>CopyRight Â© 2017</p>
 		<p>Develop & Maintained @ <a href="http://technical-spark.blogspot.in/" target="_blank">Sarvesh</a></p>
 		<div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
 			<span class="w3-text w3-padding w3-teal w3-hide-small">Go To Top</span>
