--- a/ui/index.html
+++ b/ui/index.html
@@ -3,16 +3,29 @@
 <head>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 	<title>sarvesh18.imad.hasura-app.io</title>
-	<link rel="shortcut icon" href="http://www.jumboedusupplies.com/images/favicon.ico" />
+	<link rel="shortcut icon" href="http://www.jumboedusupplies.com/images/favicon.ico">
 <!------------------------------------------------------------------------------------------------------------------------------------------->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
- 
-        <!--
-	<link rel="stylesheet" href="/ui/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+<!-------------------------------------------------------------------------------------------------------------------------------------------> 
+    <!--
 	<link rel="stylesheet" href="/ui/w3.css">
+	<link rel="stylesheet" href="/ui/style.css">
 	-->
 	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+	
+    <style>
+      /* Always set the map height explicitly to define the size of the div element that contains the map. */
+      #googleMap {
+        height: 100%;
+      }
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
 
 	<style>
 		.mySlides {display:none}
@@ -21,7 +34,7 @@
 	</style>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 </head>
-<body id="myPage">
+<body id="myBody">
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 	<div class="w3-top">
 		<div class="w3-display-topright">
@@ -32,24 +45,27 @@
 		</div>
 	</div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
-	<!--
 	<div class="w3-container">
-		<ul class="w3-navbar w3-card-2 w3-light-grey">
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About Us</a></li>
-			<li><a href="#">Blog</a></li>
-			<li><a href="#">Forum</a></li>
-			<li><a href="#">Login/Signup</a></li>
+		<ul class="w3-navbar w3-card-2 w3-light-grey w3-margin-top w3-margin-left w3-margin-right">
+			<li><a href="#myHome">Home</a></li>
+			<li class="w3-dropdown-hover"><a href="#myBlog">Blog<i class="fa fa-caret-down"></i></a>
+				<div class="w3-dropdown-content w3-white w3-card-4">
+					<a href="#">Coding</a>
+					<a href="#">Hacking</a>
+				</div>
+			</li>
+			<li><a href="#myForum">Forum</a></li>
+			<li><a href="#myTeam">About Us</a></li>
+			<li><a href="javascript:void(0)" onclick="document.getElementById('id01').style.display='block'">Login</a></li>
+			
 			<li class="w3-dropdown-hover"><a href="#">Contact Us<i class="fa fa-caret-down"></i></a>
 				<div class="w3-dropdown-content w3-white w3-card-4">
-					<a href="#">Detail</a>
-					<a href="#">Location</a>
+					<a href="#myContact">Detail</a>
+					<a href="#googleMap">Location</a>
 				</div>
 			</li>
 		</ul>
 	</div>
-	-->
-	
 <!------------------------------------------------------------------------------------------------------------------------------------------->	
 	<div class="w3-panel w3-red w3-hover-opacity">
 		<marquee><p>Hey, Welcome Anonymous! Notification 4 U.</p></marquee>
@@ -153,9 +169,8 @@
 			</div>
 		</div>
 	</div>
-    
-	<div id="teamMember" class="w3-container w3-center">
-<hr>
+<hr>   
+	<div id="myTeam" class="w3-container w3-center">
 		<div class="w3-content w3-display-container" style="max-width:1200px">
 		<!--(topleft, topmiddle, topright, bottomleft, bottommiddle, bottomright or middle)-->
 			<div class="w3-display-bottommiddle w3-large w3-container w3-padding-16 w3-black">
@@ -170,20 +185,10 @@
 			<p>Developer</p>
 		</div>
 	</div>
-	
-	<!--
-	<div class="w3-card-16" style="width:50%">
-		<img src="file:\\C:\Users\Sarvesh Singh\Desktop\Crastinator\Sarvesh.jpg" alt="Developer" style="width:100%">
-		<div class="w3-container">
-			<h4><b>Sarvesh</b></h4>
-			<p>DEVELOPER</p>
-		</div>
-        </div>
-    	-->
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 <hr>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
-   	 <div class="w3-container w3-center"
+   	<div class="w3-container w3-center"
 		<p>
 			<button class="w3-btn w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
 				<a href="https://drive.google.com/file/d/0B524wnHXkUOTVHNhWXdTYW4yLVk/view?usp=sharing"><i class="fa fa-download w3-margin-right"></i>Download Resume
@@ -194,7 +199,7 @@
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 <hr>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
-	<div class="w3-container w3-padding-64 w3-theme-l5" id="contact">
+	<div class="w3-container w3-padding-64 w3-theme-l5" id="myContact">
 		<div class="w3-row">
 			<div class="w3-col m5">
 				<div class="w3-padding-16"><span class="w3-xlarge w3-border-dark-grey w3-bottombar">Contact Us</span></div>
@@ -229,28 +234,22 @@
 <hr>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 	<!-- Google Maps -->
-	<div id="googleMap" style="width:100%;height:420px;"></div>
-	<script src="https://maps.googleapis.com/maps/api/js"></script>
-	<script>
-		var myCenter = new google.maps.LatLng(28.629143, 77.442874);
-		function initialize() {
-			var mapProp = {
-				center: myCenter,
-				zoom: 5,
-				scrollwheel: false,
-				draggable: false,
-				mapTypeId: google.maps.MapTypeId.ROADMAP
-			};
-		    var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-			var marker = new google.maps.Marker({
-			    position: myCenter,
-	    	});
-	    	marker.setMap(map);
-    	}
-	    google.maps.event.addDomListener(window, 'load', initialize);
+    <div id="googleMap"></div>
+    <script>
+      function initMap() {
+	    var myCenter = new google.maps.LatLng(28.6338, 77.4462);
+        var map = new google.maps.Map(document.getElementById('googleMap'), {
+          zoom: 8,
+          center: myCenter
+        });
+        var marker = new google.maps.Marker({
+          position: myCenter,
+          map: map
+        });
+      }
+    </script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPDoS0P-Vmk1mTquzzDdCS6iAcAJJXWhw&callback=initMap" type="text/javascript"></script>
 	</script>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPDoS0P-Vmk1mTquzzDdCS6iAcAJJXWhw&callback=initMap"
-  type="text/javascript"></script>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
  <hr>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
@@ -264,7 +263,7 @@
 		<p>Develop & Maintained @ <a href="http://technical-spark.blogspot.in/" target="_blank">Sarvesh</a></p>
 		<div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
 			<span class="w3-text w3-padding w3-teal w3-hide-small">Go To Top</span>
-			<a class="w3-btn w3-light-grey" href="#myPage"><span class="w3-xlarge">
+			<a class="w3-btn w3-light-grey" href="#myBody"><span class="w3-xlarge">
 			<i class="fa fa-chevron-circle-up"></i></span></a>
 		</div>
 	</footer>
@@ -285,7 +284,7 @@
 			<input class="w3-check w3-margin-top" type="checkbox" checked="checked"/> Remember me
         </div>
 		<div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
-			<button onclick="document.getElementById('id02').style.display='block'" type="button" id='id1'
+			<button onclick="document.getElementById('id02').style.display='block'" type="button" class="w3-btn w3-red">Signup</button>
 			<span class="w3-right w3-padding w3-hide-small">Forgot Password? <!-- <a href="#"> </a> --></span>
 		</div>
     </div>
@@ -308,18 +307,12 @@
 			<input class="w3-check w3-margin-top" type="checkbox" checked="checked" required/> For Signup, you must read and agree to our terms and conditions.
         </div>
 		<div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
-			<button onclick="document.getElementById('id01').style.display='block'" type="button" id='id2' class="w3-btn w3-red">Login</button>
+			<button onclick="document.getElementById('id02').style.display='none'" type="button" id='id2' class="w3-btn w3-red">Login</button>
 		</div> 
     </div> 
 
 	<script>
 		var modal = document.getElementById('id01');
-		window.onclick = function(event) {
-			if (event.target == modal) {
-				modal.style.display = "none";
-			}
-		}
-		var modal = document.getElementById('id1');
 		window.onclick = function(event) {
 			if (event.target == modal) {
 				modal.style.display = "none";
