--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
 	<title>sarvesh18.imad.hasura-app.io</title>
 	<link rel="shortcut icon" href="http://www.jumboedusupplies.com/images/favicon.ico">
 <!------------------------------------------------------------------------------------------------------------------------------------------->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
 <!-------------------------------------------------------------------------------------------------------------------------------------------> 
     <!--
