--- a/ui/index.html
+++ b/ui/index.html
@@ -148,6 +148,13 @@
 		<i>"Make it as simple as possible, but not simpler."</i></p>
 		<p>Albert Einstein</p>
 	</div>
+	
+	<div id="login_area">
+        <center>Loading login status...</center>
+    </div>
+	<div id="articles">
+        <center>Loading articles...</center>
+    </div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 <hr>
 <!------------------------------------------------------------------------------------------------------------------------------------------->	
