--- a/ui/index.html
+++ b/ui/index.html
@@ -310,7 +310,7 @@
 			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="passwordR" required/>
 			<label><b>Email</b></label>
 			<input class="w3-input w3-border" type="email" placeholder="Enter Email" id="emailR" required/>
-			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit" id="register_btn">Signup</button>
+			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit" id=" ">Signup</button>
 			<input class="w3-check w3-margin-top" type="checkbox" checked="checked" required/> For Signup, you must read and agree to our terms and conditions.
         </div>
 		<div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
