--- a/ui/index.html
+++ b/ui/index.html
@@ -304,8 +304,8 @@
 		</div>
         <div class="w3-container w3-section">
 			<label><b>Username</b></label>
-			<div class="w3-input w3-border"><input type="text" placeholder="Enter Username" id="usernameS" required/>
-			<!-- Ajax --></div>
+			<input class="w3-input w3-border" type="text" placeholder="Enter Username" id="usernameS" required/>
+			<!-- Ajax -->
 			<label><b>Password</b></label>
 			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="passwordS" required/>
 			<label><b>Email</b></label>
