--- a/ui/index.html
+++ b/ui/index.html
@@ -284,7 +284,7 @@
 			</div>
         <div class="w3-container  w3-section">
 			<label><b>Username</b></label>
-			<div class="w3-input w3-border w3-margin-bottom" ><input type="text" placeholder="Enter Username" id="usernameS" required/></div>
+			<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" id="usernameS" required/>
 			<label><b>Password</b></label>
 			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="passwordS" required/>
 			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit" id=" ">Login</button>
