[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -232,7 +232,7 @@
 					</div>
 					<input class="w3-check" type="checkbox" value="true" id="like" checked/>
 					<label class="w3-validate">I Like it!</label>
-					<button type="button" class="w3-btn w3-right w3-theme" id="submit_btn">Send</button>
+					<button type="button" class="w3-btn w3-right w3-theme" value="Send" id="submit_btn"/>
 				</form>
 			</div>
 		</div>
