[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -232,7 +232,9 @@
 					</div>
 					<input class="w3-check" type="checkbox" value="true" id="like" checked/>
 					<label class="w3-validate">I Like it!</label>
-					<button type="button" class="w3-btn w3-right w3-theme" value="Send" id="submit_btn"/>
+					<button type="button" class="w3-btn w3-right w3-theme" id="">Send</button> 
+					<input type="button" class="w3-btn w3-right w3-theme" value="Send" id="submit_btn"/>
+					<input type="submit" id="register_btn" value="Register" />
 				</form>
 			</div>
 		</div>
