--- a/ui/index.html
+++ b/ui/index.html
@@ -287,8 +287,7 @@
 			<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" id="username" required/>
 			<label><b>Password</b></label>
 			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="password" required/>
-			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit" id="">Login</button>
-			<input class="w3-btn-block w3-green w3-section w3-padding" type="submit" value="Login" id="submit_btn"/>
+			<input class="w3-btn-block w3-green w3-section w3-padding" type="submit" value="Login" id="login_btn"/>
 			<input class="w3-check w3-margin-top" type="checkbox" checked="checked"/> Remember me
         </div>
 		<div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
@@ -305,13 +304,13 @@
 		</div>
         <div class="w3-container w3-section">
 			<label><b>Username</b></label>
-			<input class="w3-input w3-border" type="text" placeholder="Enter Username" id="usernameR" required/>
+			<input class="w3-input w3-border" type="text" placeholder="Enter Username" id="usernameS" required/>
 			<!-- Ajax -->
 			<label><b>Password</b></label>
-			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="passwordR" required/>
+			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="passwordS" required/>
 			<label><b>Email</b></label>
-			<input class="w3-input w3-border" type="email" placeholder="Enter Email" id="emailR" required/>
-			<button class="w3-btn-block w3-green w3-section w3-padding" type="submit" id="register_btn">Signup</button>
+			<input class="w3-input w3-border" type="email" placeholder="Enter Email" id="emailS" required/>
+			<input class="w3-btn-block w3-green w3-section w3-padding" type="submit" value="Signup" id="signup_btn"/>
 			<input class="w3-check w3-margin-top" type="checkbox" checked="checked" required/> For Signup, you must read and agree to our terms and conditions.
         </div>
 		<div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
