[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -230,7 +230,7 @@
 						<label class="w3-label">Subject</label>
 						<input class="w3-input" type="text" id="subject" required/>
 					</div>
-					<input class="w3-check" type="checkbox" value="true" id="like" checked/>
+					<input class="w3-check" type="checkbox" value="true" id="likes" checked/>
 					<label class="w3-validate">I Like it!</label>
 					<input class="w3-btn w3-right w3-theme" type="submit" value="Send" id="add_btn"/>
 				</form>
