[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -34,7 +34,7 @@
 	</style>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 </head>
-<body id="myBody">
+<body>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 	<div class="w3-top">
 		<div class="w3-display-topright">
