[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -34,7 +34,7 @@
 	</style>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 </head>
-<body>
+<body id="myBody">
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 	<div class="w3-top">
 		<div class="w3-display-topright">
@@ -210,7 +210,7 @@
 					<p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  sarvesh.singh18@hotmail.com</p>
 				</div>
 			<div class="w3-col m7">
-				<form class="w3-container w3-card-4 w3-padding-16 w3-white">
+				<div class="w3-container w3-card-4 w3-padding-16 w3-white">
 					<div class="w3-group">
 						<label class="w3-label">Name</label>
 						<input class="w3-input" type="text" id="name" required/>
@@ -226,7 +226,7 @@
 					<input class="w3-check" type="checkbox" value="true" id="likes" checked/>
 					<label class="w3-validate">I Like it!</label>
 					<input class="w3-btn w3-right w3-theme" type="submit" value="Send" id="add_btn"/>
-				</form>
+				</div>
 			</div>
 		</div>
 	</div>
