--- a/ui/index.html
+++ b/ui/index.html
@@ -74,7 +74,7 @@
 <hr>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 	<div id="myMsg" class="w3-container w3-center w3-animate-top">
-		<!--<h1>Welcome!!!</h1>-->
+		<h1>Welcome!!!</h1>
 	</div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 <hr>
