--- a/ui/Sarvesh.html
+++ b/ui/Sarvesh.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
+<title>Page Title</title>
 </head>
 <body>
-<H1>Hello Frnd</H1>
+<a class="twitter-timeline" href="https://twitter.com/sarvesh_smcs2">Tweets by sarvesh_smcs2</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
-</html>
+</html
