[imad-console] Updates ui/Sarvesh.html

--- a/ui/Sarvesh.html
+++ b/ui/Sarvesh.html
@@ -7,7 +7,7 @@
 <!------------------------------------------------------------------------------------------------------------------------------------------->
     <meta charset="utf-8">
     
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+                         <meta name="apple-mobile-web-app-capable" content="yes" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <!-------------------------------------------------------------------------------------------------------------------------------------------> 
@@ -163,15 +163,17 @@
 		</ul>
 	</div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
-<hr>
+                    <hr>
+                    
+                    <div class="w3-content w3-display-container" style="max-width:300px">
+                        <a class="twitter-timeline" href="https://twitter.com/sarvesh_smcs2">Tweets by sarvesh_smcs2</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-<a class="twitter-timeline" href="https://twitter.com/sarvesh_smcs2">Tweets by sarvesh_smcs2</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
+                        <!--<iframe width="700" height="394" src="https://www.youtube-nocookie.com/embed/xspoREpBOhY?rel=0     https://www.youtube.com/watch?v=xspoREpBOhY" frameborder="0" allowfullscreen></iframe>-->
 
- <!--<iframe width="700" height="394" src="https://www.youtube-nocookie.com/embed/xspoREpBOhY?rel=0     https://www.youtube.com/watch?v=xspoREpBOhY" frameborder="0" allowfullscreen></iframe>-->
+	                    <iframe width="700" height="394" src="https://www.youtube-nocookie.com/embed/RguA0jevrAc&index=22&list=PLOerUtUR1hndpnyu1Bno6wVl3v1eRO-2At=PLOerUtUR1hnem0Ct_6whTmFp1wE3oPFgh" frameborder="0" allowfullscreen></iframe>>
 
-	<iframe width="700" height="394" src="https://www.youtube-nocookie.com/embed/RguA0jevrAc&index=22&list=PLOerUtUR1hndpnyu1Bno6wVl3v1eRO-2At=PLOerUtUR1hnem0Ct_6whTmFp1wE3oPFgh" frameborder="0" allowfullscreen></iframe>>
-
+                    </div>
 
 <hr>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
