[imad-console] Updates ui/Sarvesh.html

--- a/ui/Sarvesh.html
+++ b/ui/Sarvesh.html
@@ -175,7 +175,7 @@
                         
                         <!--<iframe width="700" height="394" src="https://www.youtube-nocookie.com/embed/xspoREpBOhY?rel=0     https://www.youtube.com/watch?v=xspoREpBOhY" frameborder="0" allowfullscreen></iframe>-->
 
-	                    <iframe width="700" height="394" src="https://www.youtube-nocookie.com/embed/RguA0jevrAc&index=22&list=PLOerUtUR1hndpnyu1Bno6wVl3v1eRO-2At=PLOerUtUR1hnem0Ct_6whTmFp1wE3oPFgh?rel=0" frameborder="0" allowfullscreen></iframe>>
+	                    <iframe width="700" height="394" src="https://www.youtube-nocookie.com/embed/Dp6lbdoprZ0&list=PLOerUtUR1hndpnyu1Bno6wVl3v1eRO-2A&index=24?rel=0" frameborder="0" allowfullscreen></iframe>>
 
                     </div>
 
